--- a/v2/파일구조.md
+++ b/v2/파일구조.md
@@ -30,8 +30,8 @@
 │           └── static/
 │               └── output/
 │                     └── <songTitle>_silhouette.mp4
-│
-├── 📁 flask/
+X
+├── 📁 <folder>/
 │   ├── flask_v2.py                       <-- Flask 서버 메인 파일
 │   ├── pose_analysis.py                 <-- 정확도 분석 로직
 │   └── 📁 videos1/                      <-- 전문가 영상 저장 폴더
